--- a/src/locales/ru/messages.po
+++ b/src/locales/ru/messages.po
@@ -1786,7 +1786,7 @@ msgstr "Качество"
 #: src/views/Main/index.js:412
 #: src/views/Settings.js:1239
 #: src/views/Settings.js:1920
-msgid "Broadcast URL"
+msgid "URL Трансляции"
 msgstr "URL Трансляции"
 
 #: src/views/Settings.js:1962
