--- a/src/locales/ru/messages.po
+++ b/src/locales/ru/messages.po
@@ -1786,8 +1786,8 @@ msgstr "Качество"
 #: src/views/Main/index.js:412
 #: src/views/Settings.js:1239
 #: src/views/Settings.js:1920
-msgid "URL Трансляции"
-msgstr "URL Трансляции"
+msgid "Ключ Трансляции"
+msgstr "Ключ Трансляции"
 
 #: src/views/Settings.js:1962
 msgid "RTMP Port"
